2014-03-06  Werner Lemberg  <wl@gnu.org>

	* Version 2.5.3 released.
	=========================


	Tag sources with `VER-2-5-3'.

	* README: Updated.
	* src/*.1: Updated.

2014-03-04  Werner Lemberg  <wl@gnu.org>

	* Makefile (LINK_LIBS) [unixdev]: Don't use pkg-config for bzip2.

	Not all platforms have `bzip2.pc'.  We also add `-lz' just for
	completeness.

2014-01-30  Werner Lemberg  <wl@gnu.org>

	[ftbench] Allow `-s 0' for better testing of FT_LOAD_NO_SCALE.

	* src/ftbench.c (main) <'s'>: Don't alter value 0.
	Don't call `FT_Set_Pixel_Sizes' for size == 0.
	Don't call tests for size == 0 that need valid scaling factors.
	(usage): Updated.
	(benchmark): Return meaningful timer value for error-only calls.
	(test_embolden): Enable test.  I think there is no longer a reason
	to not run it.

	* src/ftbench.1: Updated.

2014-01-28  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (grid_status_rescale_initial): Avoid NaN values.
	Remove forgotten debug message.

2014-01-28  Werner Lemberg  <wl@gnu.org>

	* graph/grblit.c (grBlitGlyphToBitmap): Don't crash on empty glyphs.
	Problem reported by Dave Arnold <darnold@adobe.com>.

2014-01-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Show (some) blue zones.

	* src/ftgrid.c (af_glyph_hints_get_segment_offset): Update
	prototype.
	(GridStatucRec): New member `blue_color'.
	(grid_status_display): Change `on' color to red.
	Set `blue' color.
	(grid_hint_draw_segment): Show associated blue zones.
	(event_help): Updated.

2014-01-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Minor.

	* src/ftgrid.c (GridStatusRec): Rename `conic_color' to `off_color'.
	Remove unused `cubic_color' member.
	(grid_status_display, grid_status_draw_outline): Updated.

2013-12-22  Werner Lemberg  <wl@gnu.org>

	* Makefile (LINK_LIBS) [unixdev]: Use pkg-config to get link flags.

	This corresponds to a similar change in current FreeType to link
	with HarfBuzz in development mode.

2013-12-08  Werner Lemberg  <wl@gnu.org>

	* Version 2.5.2 released.