@@ -1,3 +1,9 @@
+2014-05-11  Werner Lemberg  <wl@gnu.org>
+
+	Fix Savannah bug #42182.
+
+	* src/ttdebug.c (main): Fix typos.
+
 2014-03-06  Werner Lemberg  <wl@gnu.org>
 
 	* Version 2.5.3 released.
